touch up on swagger ui and comments
