# docs/swagger.json
@@ -14,7 +14,7 @@
         "version": "1.0"
     },
     "host": "localhost:8080",
-    "basePath": "/",
+    "basePath": "/api/v1",
     "paths": {
         "/": {
             "get": {
@@ -73,12 +73,12 @@
                 "summary": "Add a new channel",
                 "parameters": [
                     {
-                        "description": "Channel JSON",
-                        "name": "channel",
+                        "description": "Title in JSON",
+                        "name": "title",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/main.Channel"
+                            "$ref": "#/definitions/main.ChannelRequest"
                         }
                     }
                 ],
@@ -134,6 +134,45 @@
                         }
                     }
                 }
+            },
+            "post": {
+                "description": "Add a new article of a channel",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "articles"
+                ],
+                "summary": "Add a new article",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Channel ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Url in JSON",
+                        "name": "url",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/main.ArticleRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                }
             }
         }
     },
@@ -155,12 +194,28 @@
                 }
             }
         },
+        "main.ArticleRequest": {
+            "type": "object",
+            "properties": {
+                "url": {
+                    "type": "string"
+                }
+            }
+        },
         "main.Channel": {
             "type": "object",
             "properties": {
                 "id": {
                     "type": "integer"
                 },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "main.ChannelRequest": {
+            "type": "object",
+            "properties": {
                 "title": {
                     "type": "string"
                 }
